--- a/styles/style.css
+++ b/styles/style.css
@@ -888,7 +888,7 @@ h1 .fontChange {
 }
 
 .themeSwitch input {
-  display: none;
+  opacity: 0;
 }
 
 .slider {
@@ -990,14 +990,18 @@ input:checked + .slider:before {
   text-shadow: 0 0.015em #e3dbdb, 0 -0.015em #e3dbdb, 0.01em 0 #e3dbdb, -0.01em 0 #e3dbdb;
 }
 .darkMode .hamburger {
-  background-color: #3660df;
+  background-color: #121212;
+}
+.darkMode .hamburger i {
+  color: #f4f0ec;
 }
 .darkMode .hamburger li:hover,
-.darkMode .hamburger i.fa-times:hover {
+.darkMode .hamburger li:focus-within {
   outline: 2px solid #f4f0ec;
 }
-.darkMode .hamburger i.fa-times {
-  color: #f4f0ec;
+.darkMode button.hamburger:hover,
+.darkMode button.hamburger:focus-within {
+  outline: 2px solid #f4f0ec;
 }
 
 .animationContainer {
